# USD-Custom-Resolver-Windows-Example

custom_resolver/project/: CMakeLists.txt  envir
custom_resolver/project/cmake/: FindUSD.cmake
src/: CMakeLists.txt
